# veeam_test

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: Python CI.yml
task_03/: check_files.py  cli.py  main.py
tests/: conftest.py  test_check_files.py
tests/fixtures/: correct_output.txt  test_input_file.txt
tests/fixtures/test_directory/: file_01.txt  file_02.txt  file_03.txt
